try on fix for layout on safari

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ body {
     height: 100vh;
     height: fill-available;
     height: -webkit-fill-available;
+    min-height: 100vh;
+    min-height: fill-available;
+    min-height: -webkit-fill-available;
     font-family: "Inter";
 }
 
